--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,18 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.gallery > .item {
+  max-width: 100%;
+  height: 100%;
+  margin: 15px;
+}
+
+.gallery > .item > img {
+  object-fit: cover;
+}
